[gd_scene load_steps=8 format=3 uid="uid://dw7518se5lge5"]

[ext_resource type="Script" path="res://gui/menu/stage_list.gd" id="1_p8l8j"]
[ext_resource type="Theme" uid="uid://bfqvhpwoqicre" path="res://assets/resource/theme/main_theme.tres" id="2_v8s8y"]
[ext_resource type="StyleBox" uid="uid://bdy2y6crmor5f" path="res://assets/resource/theme/stylebox/transparent.tres" id="3_ie5e7"]
[ext_resource type="LabelSettings" uid="uid://cxeym524iwyrf" path="res://assets/resource/theme/label_settings/title_medium.tres" id="4_hk0yb"]
[ext_resource type="PackedScene" uid="uid://bwweoq10c48qi" path="res://extra/sfx/sfx_control.tscn" id="5_cv5cd"]
[ext_resource type="PackedScene" uid="uid://caxfw4ii06al1" path="res://gui/panel/game_choice_panel/game_choice_panel.tscn" id="6_xg0iv"]
[ext_resource type="PackedScene" uid="uid://br3fx1tn404b1" path="res://gui/panel/learning_panel/learning_panel.tscn" id="7_2mp3b"]

[node name="stage_list" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_p8l8j")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.235294, 0.305882, 0.454902, 1)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.252778
anchor_top = 0.1075
anchor_right = 0.747222
anchor_bottom = 0.8925
offset_left = -135.0
offset_top = -13.0
offset_right = 135.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_v8s8y")
theme_override_styles/panel = ExtResource("3_ie5e7")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Select Level"
label_settings = ExtResource("4_hk0yb")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
follow_focus = true

[node name="StageContainer" type="GridContainer" parent="Panel/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 3
columns = 4

[node name="BackButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -57.9996
offset_top = -9.0
offset_right = 22.0004
offset_bottom = 41.0
grow_horizontal = 0
text = "Back"

[node name="sfx_control" parent="." instance=ExtResource("5_cv5cd")]
root_node = NodePath("../Panel")

[node name="GameChoicePanel" parent="." node_paths=PackedStringArray("learning_panel") instance=ExtResource("6_xg0iv")]
visible = false
layout_mode = 1
learning_panel = NodePath("../LearningPanel")

[node name="LearningPanel" parent="." instance=ExtResource("7_2mp3b")]
visible = false
layout_mode = 1

[connection signal="pressed" from="Panel/BackButton" to="." method="_on_back_button_pressed"]
